ingress-portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"portfolio-ingress","namespace":"portfolio"},"spec":{"rules":[{"host":"www.bruzco.com","http":{"paths":[{"backend":{"service":{"name":"portfolio-service","port":{"number":4300}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2024-02-19T23:08:03Z"
  generation: 3
  name: portfolio-ingress
  namespace: portfolio
  resourceVersion: "139244432"
  uid: 183e5227-b4de-4cad-bae8-c243bf403cd0
spec:
  rules:
  - host: *.bruzco.com
    http:
      paths:
      - backend:
          service:
            name: portfolio-service
            port:
              number: 4300
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 146.190.3.13
